[gd_scene load_steps=7 format=3 uid="uid://yrr85mbbtwta"]

[ext_resource type="Script" uid="uid://beyfq50emdo1d" path="res://scripts/plan_card_3d.gd" id="1"]
[ext_resource type="BoxMesh" path="res://resources/card_box_mesh.tres" id="2"]
[ext_resource type="Material" path="res://resources/card_plan_material.tres" id="3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_card"]
size = Vector3(2.6, 0.2, 1.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_left"]
size = Vector3(0.4, 0.15, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_right"]
size = Vector3(0.4, 0.15, 0.4)

[node name="PlanCard3D" type="Node3D"]
script = ExtResource("1")

[node name="CardMesh" type="MeshInstance3D" parent="."]
material_override = ExtResource("3")
mesh = ExtResource("2")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0552983, 0.042, 0.717304)
pixel_size = 0.01
text = "Troops: 0
Enemy: Unknown"
font_size = 24
outline_size = 3
vertical_alignment = 2

[node name="CardArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.02, 0)
collision_layer = 2
collision_mask = 2

[node name="CardCollision" type="CollisionShape3D" parent="CardArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("BoxShape3D_card")

[node name="OwnUnitsAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.06, 0.35)

[node name="EnemyUnitsAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.06, -0.35)

[node name="MarchControls" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.108133, -0.35)

[node name="LeftArrow" type="Area3D" parent="MarchControls"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.06064, 0, 0)
collision_layer = 8
collision_mask = 8

[node name="LeftLabel" type="Label3D" parent="MarchControls/LeftArrow"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.02, 0)
text = "<"
font_size = 100
outline_size = 2

[node name="LeftCollision" type="CollisionShape3D" parent="MarchControls/LeftArrow"]
shape = SubResource("BoxShape3D_left")

[node name="MarchLabel" type="Label3D" parent="MarchControls"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -0.00605494, -0.00389433, 0.0677443)
text = "Camp"
font_size = 50
outline_size = 2

[node name="RightArrow" type="Area3D" parent="MarchControls"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.04705, 0.00302148, 0)
collision_layer = 8
collision_mask = 8

[node name="RightLabel" type="Label3D" parent="MarchControls/RightArrow"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.02, 0)
text = ">"
font_size = 100
outline_size = 2

[node name="RightCollision" type="CollisionShape3D" parent="MarchControls/RightArrow"]
shape = SubResource("BoxShape3D_right")
